[package]
name = "hello_world"
version = "0.1.0"
authors = ["Enis ASLAN"]
edition = "2018"
rust-version = "1.57"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.4"
features = [
'Document', 
'Element', 
'HtmlElement', 
'Node', 
'Window', 
'MouseEvent', 
'Window',
'HtmlButtonElement',
'console'
]

